[package]
name = "surrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indoc = "1.0"
tokio = { version = "1.24.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
clap = { version = "4.1", features = ["unstable-doc"] }
log = { version = "0.4" }
env_logger = "0.10"
nameof = "1.2"

[dependencies.surrealdb]
git = "https://github.com/pseudocc/surrealdb"
tag = "v1.0.0-beta.9rc1"
features = ["kv-mem", "kv-rocksdb"]
